Make NotesPage work
