# NotkaMobile/OpenAPIs/swagger.json
@@ -954,7 +954,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Note"
+                    "$ref": "#/components/schemas/NoteForView"
                   }
                 }
               },
@@ -962,7 +962,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Note"
+                    "$ref": "#/components/schemas/NoteForView"
                   }
                 }
               },
@@ -970,7 +970,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Note"
+                    "$ref": "#/components/schemas/NoteForView"
                   }
                 }
               }
@@ -1010,17 +1010,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               }
             }
@@ -1048,17 +1048,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             }
           }
@@ -1108,17 +1108,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/Note"
+                "$ref": "#/components/schemas/NoteForView"
               }
             }
           }
@@ -1129,17 +1129,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Note"
+                  "$ref": "#/components/schemas/NoteForView"
                 }
               }
             }
@@ -4582,6 +4582,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -4625,6 +4626,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -4635,9 +4637,6 @@
           "userId": {
             "type": "integer",
             "format": "int32"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
           },
           "listTags": {
             "type": "array",
@@ -4681,6 +4680,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -4811,6 +4811,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -4822,9 +4823,6 @@
             "type": "integer",
             "format": "int32"
           },
-          "user": {
-            "$ref": "#/components/schemas/User"
-          },
           "noteTag": {
             "type": "array",
             "items": {
@@ -4834,6 +4832,46 @@
           },
           "picture": {
             "$ref": "#/components/schemas/Picture"
+          }
+        },
+        "additionalProperties": false
+      },
+      "NoteForView": {
+        "required": [
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "isActive": {
+            "type": "boolean"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "modifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "name": {
+            "maxLength": 200,
+            "minLength": 1,
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "tagsForView": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TagForView"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -4907,16 +4945,10 @@
             "type": "integer",
             "format": "int32"
           },
-          "user": {
-            "$ref": "#/components/schemas/User"
-          },
           "noteId": {
             "type": "integer",
             "format": "int32",
             "nullable": true
-          },
-          "note": {
-            "$ref": "#/components/schemas/Note"
           }
         },
         "additionalProperties": false
@@ -4943,6 +4975,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5092,6 +5125,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5167,6 +5201,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5246,6 +5281,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5324,6 +5360,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5367,6 +5404,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5377,9 +5415,6 @@
           "userId": {
             "type": "integer",
             "format": "int32"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
           },
           "noteTags": {
             "type": "array",
@@ -5401,6 +5436,43 @@
               "$ref": "#/components/schemas/TaskTag"
             },
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "TagForView": {
+        "required": [
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "isActive": {
+            "type": "boolean"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "modifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "name": {
+            "maxLength": 200,
+            "minLength": 1,
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "userId": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -5427,6 +5499,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
@@ -5437,9 +5510,6 @@
           "userId": {
             "type": "integer",
             "format": "int32"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
           },
           "taskTag": {
             "type": "array",
@@ -5639,6 +5709,7 @@
             "format": "date-time"
           },
           "name": {
+            "maxLength": 200,
             "minLength": 1,
             "type": "string"
           },
